# loop-creator

./: .gitignore  README.md  dev.sh  pyproject.toml
creator/: cli.py  config.py  runner.py  spec.py
creator/adapters/: base.py  claude.py  devin.py  ollama.py
creator/audio/: recorder.py  whisper.py
creator/context/: bundle.py  external.py  history.py  mcp.py  project.py
creator/gepa/: engine.py  judge.py  mutators.py  scorer.py
creator/prompts/: registry.py  runner.py  spec.py
creator/skills/: registry.py  runner.py  spec.py
creator/templates/: registry.py
creator/wizard/: app.py  dashboard.py
docs/: README.md
loop_creator/: cli.py  runner.py  spec.py
loop_creator/adapters/: claude.py
loop_creator/gepa/: engine.py  judge.py  mutators.py  scorer.py
loop_creator/loop_types/: registry.py
loop_creator/wizard/: app.py  dashboard.py
tauri-app/: loop_creator_server.spec  pyproject.toml  run_server.py
tauri-app/lc_server/: main.py
tauri-app/lc_server/routes/: config.py  context.py  files.py  loops.py  prompts.py  skills.py  templates.py  transcribe.py
tauri-app/scripts/: build.sh
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: main.rs
tauri-app/tests/server/: conftest.py  test_config_route.py  test_context.py  test_files.py  test_health.py  test_loops_crud.py  test_loops_run.py  test_prompts.py  test_skills.py  test_transcribe.py
tauri-app/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tauri-app/web/src/: App.tsx  index.css  main.tsx  types.ts
tauri-app/web/src/components/: EvolutionViewer.tsx  ResultsPanel.tsx  ScoreBar.tsx  Sidebar.tsx
tauri-app/web/src/components/__tests__/: ScoreBar.test.tsx  Sidebar.test.tsx
tauri-app/web/src/hooks/: useFiles.ts  useLoop.ts  usePrompt.ts  useSkill.ts  useTranscribe.ts
tauri-app/web/src/hooks/__tests__/: useFiles.test.ts  usePrompt.test.ts  useSkill.test.ts  useTranscribe.test.ts
tauri-app/web/src/pages/: Builder.tsx  Dashboard.tsx  FileEditor.tsx  LoopList.tsx  PromptBuilder.tsx  PromptDashboard.tsx  PromptList.tsx  PromptUse.tsx  Settings.tsx  SkillBuilder.tsx  SkillDashboard.tsx  SkillList.tsx
tauri-app/web/src/pages/__tests__/: Builder.test.tsx  Dashboard.test.tsx  FileEditor.test.tsx  LoopList.test.tsx  PromptBuilder.test.tsx  PromptDashboard.test.tsx  PromptList.test.tsx  PromptUse.test.tsx  Settings.test.tsx  SkillBuilder.test.tsx  SkillDashboard.test.tsx  SkillList.test.tsx
tauri-app/web/src/styles/: theme.ts
tauri-app/web/src/utils/: dialog.ts
tests/: test_runner.py  test_spec.py
tests/adapters/: test_claude.py  (+2 more)
(+30 files in other folders)
