[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-creator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.61",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tiktoken>=0.8",
    "rich>=13.0",
]

[project.scripts]
loop-creator = "loop_creator.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["loop_creator"]
