[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "creator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.61",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tiktoken>=0.8",
    "rich>=13.0",
]

[project.scripts]
creator = "creator.cli:app"
lc = "creator.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["creator"]
